--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -179,7 +179,7 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .md body {
-    --ion-background-color: #ffffff;
+    --ion-background-color: #eae4e4;
     --ion-background-color-rgb: 18, 18, 18;
 
     --ion-text-color: #000;
@@ -206,11 +206,11 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #ffffff;
+    --ion-item-background: #eae4e4;
 
-    --ion-toolbar-background: #ffffff;
+    --ion-toolbar-background: #eae4e4;
 
-    --ion-tab-bar-background: #ffffff;
+    --ion-tab-bar-background: #eae4e4;
 
     --ion-card-background: #eae4e4;
   }
